--- a/S1FileSync/App.xaml
+++ b/S1FileSync/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="S1FileSync.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:S1FileSync"
-             StartupUri="/Views/MainWindow.xaml">
+             xmlns:local="clr-namespace:S1FileSync">
     <Application.Resources>
          
     </Application.Resources>
