--- a/S1FileSync/App.xaml
+++ b/S1FileSync/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:S1FileSync">
     <Application.Resources>
-         
+         <Style TargetType="ComboBoxItem">
+             <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+             <Setter Property="VerticalAlignment" Value="Center"></Setter>
+         </Style>
     </Application.Resources>
 </Application>
