feat. 서비스 설치 패키지 생성중

--- a/S1FileSync/Views/MainWindow.xaml
+++ b/S1FileSync/Views/MainWindow.xaml
@@ -10,6 +10,7 @@
         Width="800" Height="550"
         MaxHeight="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}"
         MaxWidth="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}"
+        Icon="/Assets/app.ico"
         >
     <Grid>
         <Grid.RowDefinitions>
