--- a/SetupProject/Product.wxs
+++ b/SetupProject/Product.wxs
@@ -21,27 +21,22 @@
 			Privileged
 		</Condition>
 
+		<Directory Id="TARGETDIR" Name="SourceDir">
+			<Directory Id="ProgramFilesFolder">
+				<Directory Id="INSTALLFOLDER" Name="S1FileSync">
+					<Directory Id="ServiceFolder" Name="Service" />
+				</Directory>
+			</Directory>
+		</Directory>
+
 		<Feature Id="Complete" Title="S1FileSync" Level="1"
 		         Description="File synchronization program with background service"
 		         Display="expand" ConfigurableDirectory="INSTALLFOLDER">
 
-			<ComponentGroupRef Id="CommonComponents"/>
-
-			<Feature Id="MainApplication" Title="S1FileSync Application" Level="1">
-				<!-- 수동으로 정의한 컴포넌트 참조 -->
-				<ComponentRef Id="MainExecutable" />
-				<ComponentRef Id="ServiceInfoFile" />
-				<ComponentRef Id="ApplicationShortcut" />
-				<!-- Heat로 생성된 컴포넌트 그룹 참조 -->
-				<ComponentGroupRef Id="HeatGenerated_MainAppComponents" />
-			</Feature>
-			<Feature Id="ServiceApplication" Title="S1FileSync Service" Level="1">
-				<!-- 수동으로 정의한 컴포넌트 참조 -->
-				<ComponentRef Id="ServiceExecutable" />
-				<ComponentRef Id="ServiceConfig" />
-				<!-- Heat로 생성된 컴포넌트 그룹 참조 -->
-				<ComponentGroupRef Id="HeatGenerated_ServiceComponents" />
-			</Feature>
+			<ComponentGroupRef Id="CombinedComponents"/>
+			<ComponentRef Id="ServiceExecutable" />
+			<ComponentRef Id="ServiceInfoFile" />
+			<ComponentRef Id="SettingsFile" />
 		</Feature>
 
 		<UI>
@@ -49,60 +44,14 @@
 			<Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
 		</UI>
 	</Product>
-	<!-- 디렉토리 구조 -->
 	<Fragment>
-		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLFOLDER" Name="S1FileSync">
-					<Directory Id="MainAppFolder" Name="App" />
-					<Directory Id="ServiceFolder" Name="Service" />
-				</Directory>
-			</Directory>
-			<Directory Id="ProgramMenuFolder">
-				<Directory Id="ApplicationProgramsFolder" Name="S1FileSync"/>
-			</Directory>
-		</Directory>
-	</Fragment>
-	<!-- 메인 응용프로그램 핵심 컴포넌트 -->
-	<Fragment>
-		<!-- 메인 실행 파일 -->
-		<Component Id="MainExecutable" Directory="MainAppFolder" Guid="*">
-			<File Id="MainEXE"
-			      Name="S1FileSync.exe"
-			      Source="$(var.MainAppSourceDir)\S1FileSync.exe"
-			      KeyPath="yes" />
-		</Component>
-
-		<!-- 서비스 정보 파일 -->
-		<Component Id="ServiceInfoFile" Directory="MainAppFolder" Guid="*">
-			<File Id="ServiceInfoINI"
-			      Name="ServiceInfo.ini"
-			      Source="$(var.ServiceConfigFolder)\ServiceInfo.ini"
-			      KeyPath="yes" />
-		</Component>
-
-		<!-- 시작 메뉴 바로가기 -->
-		<Component Id="ApplicationShortcut" Directory="ApplicationProgramsFolder" Guid="*">
-			<Shortcut Id="ApplicationStartMenuShortcut"
-			          Name="S1FileSync"
-			          Description="File Synchronization Program"
-			          Target="[MainAppFolder]S1FileSync.exe"
-			          WorkingDirectory="MainAppFolder"
-			          Icon="app.ico"/>
-			<RemoveFolder Id="CleanUpShortCut" Directory="ApplicationProgramsFolder" On="uninstall"/>
-			<RegistryValue Root="HKCU" Key="Software\S1FileSync" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-		</Component>
-	</Fragment>
-
-	<!-- 서비스 핵심 컴포넌트 -->
-	<Fragment>
-		<!-- 서비스 실행 파일 -->
-		<Component Id="ServiceExecutable" Directory="ServiceFolder" Guid="*">
+		<Component Id="ServiceExecutable" Directory="INSTALLFOLDER" Guid="*">
 			<File Id="ServiceEXE"
 			      Name="S1FileSyncService.exe"
-			      Source="$(var.ServiceSourceDir)\S1FileSyncService.exe"
+			      Source="$(var.CombinedSourceDir)\S1FileSyncService.exe"
 			      KeyPath="yes" />
 
+			<!-- 서비스 설치 및 제어 정의 -->
 			<ServiceInstall Id="ServiceInstaller"
 			                Type="ownProcess"
 			                Name="S1FileSyncService"
@@ -117,12 +66,20 @@
 			                Name="S1FileSyncService"
 			                Wait="yes" />
 		</Component>
-
-		<!-- 서비스 설정 파일 -->
-		<Component Id="ServiceConfig" Directory="ServiceFolder" Guid="*">
-			<File Id="AppSettings"
-			      Name="appsettings.json"
-			      Source="$(var.ServiceSourceDir)\appsettings.json"
+	</Fragment>
+	<Fragment>
+		<Component Id="ServiceInfoFile" Directory="INSTALLFOLDER" Guid="*">
+			<File Id="ServiceInfoINI"
+			      Name="ServiceInfo.ini"
+			      Source="$(var.ServiceConfigFolder)\ServiceInfo.ini"
+			      KeyPath="yes" />
+		</Component>
+	</Fragment>
+	<Fragment>
+		<Component Id="SettingsFile" Directory="INSTALLFOLDER" Guid="*">
+			<File Id="SettingsINI"
+			      Name="settings.ini"
+			      Source="$(var.ServiceConfigFolder)\settings.ini"
 			      KeyPath="yes" />
 		</Component>
 	</Fragment>
