--- a/SetupProject/Product.wxs
+++ b/SetupProject/Product.wxs
@@ -36,6 +36,7 @@
 			<ComponentGroupRef Id="CombinedComponents"/>
 			<ComponentRef Id="ServiceExecutable" />
 			<ComponentRef Id="ServiceInfoFile" />
+			<ComponentRef Id="StartupRegistryEntry" />
 		</Feature>
 
 		<UI>
