--- a/S1FileSync/App.xaml
+++ b/S1FileSync/App.xaml
@@ -1,11 +1,20 @@
 ﻿<Application x:Class="S1FileSync.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:S1FileSync">
+             xmlns:local="clr-namespace:S1FileSync"
+             xmlns:converters="clr-namespace:S1FileSync.Converters">
     <Application.Resources>
-         <Style TargetType="ComboBoxItem">
-             <Setter Property="HorizontalAlignment" Value="Left"></Setter>
-             <Setter Property="VerticalAlignment" Value="Center"></Setter>
-         </Style>
+        <ResourceDictionary>
+            <Style x:Key="DefaultComboBoxItemStyle" TargetType="{x:Type ComboBoxItem}">
+                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            </Style>
+
+            <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource DefaultComboBoxItemStyle}"></Style>
+            
+            <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
+            <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+            <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
