--- a/SetupProject/GeneratedFiles/CombinedFiles.wxs
+++ b/SetupProject/GeneratedFiles/CombinedFiles.wxs
@@ -2,137 +2,143 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
         <DirectoryRef Id="INSTALLFOLDER">
-            <Component Id="cmpA0863526952F7834E7C922F065E4C8A8" Guid="{7CB5649F-1A0A-4B65-BAAB-7D5B63E1DA60}">
+            <Component Id="cmpA0863526952F7834E7C922F065E4C8A8" Guid="{57EDFE7B-B059-4A62-9795-1831CBFFC387}">
                 <File Id="filC04B02D0CCC2D5CCC1013B35DE86DB29" KeyPath="yes" Source="$(var.CombinedSourceDir)\appsettings.Development.json" />
             </Component>
-            <Component Id="cmpF82FCA80BBAF44D285C97F10993DEEE6" Guid="{916BC265-214E-41E9-8361-4CB6D1CD81A7}">
+            <Component Id="cmpF82FCA80BBAF44D285C97F10993DEEE6" Guid="{A023BF8E-A5A5-46CC-91BE-75315827B0DA}">
                 <File Id="fil840B80AC19861C7F9F04FBDCFAE331CE" KeyPath="yes" Source="$(var.CombinedSourceDir)\appsettings.json" />
             </Component>
-            <Component Id="cmpB80C8C91FDE05193D3329C3E951DB6B3" Guid="{CA154719-5CE8-4F94-A4F7-FF6230D17096}">
+            <Component Id="cmpB80C8C91FDE05193D3329C3E951DB6B3" Guid="{952CAC5B-C7CE-458D-9BBE-26FAAC33C385}">
                 <File Id="filEB65F8B6B0E3C4C5A1CD099319C8040B" KeyPath="yes" Source="$(var.CombinedSourceDir)\FileIOHelper.dll" />
             </Component>
-            <Component Id="cmpDC19BA21EFF423B27F8787A2AB8F2B3C" Guid="{FC4C07EA-C291-49DF-84C2-986BAA309135}">
+            <Component Id="cmpDC19BA21EFF423B27F8787A2AB8F2B3C" Guid="{F8F5ABC3-A801-42AA-8737-0B29523C1B8B}">
                 <File Id="filF6767F9D22B6D46DD3A2FC798B5F23DE" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.Abstractions.dll" />
             </Component>
-            <Component Id="cmp85A16DDDD438C8839C302EEFF54E8E0C" Guid="{9B875733-69AB-41EB-8176-71A64EEF2334}">
+            <Component Id="cmp85A16DDDD438C8839C302EEFF54E8E0C" Guid="{705C3243-D29F-45B7-85B7-21825B501A7A}">
                 <File Id="fil52FC3D526CBD9DC330C6FE3380563F0C" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.Binder.dll" />
             </Component>
-            <Component Id="cmp4A61E3F01E16F7C35D22D304DE7C3D7D" Guid="{628FE5C4-5CC0-4028-B76E-A3B4710E4B19}">
+            <Component Id="cmp4A61E3F01E16F7C35D22D304DE7C3D7D" Guid="{7E2AEBB8-08C2-41E5-AF5F-EE1346CCB410}">
                 <File Id="filB3B34A4CDA6A327AC31CAD64389BC80C" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.CommandLine.dll" />
             </Component>
-            <Component Id="cmpC2B3CC4C105FBF588A9EBBD45742C349" Guid="{40F220CD-968D-43E9-B736-A0B7B9597341}">
+            <Component Id="cmpC2B3CC4C105FBF588A9EBBD45742C349" Guid="{CDE55F18-6EC6-4423-BC54-4BF9C0EF12EE}">
                 <File Id="filE9F345539532616C2BEF86BE1CEB83E2" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.dll" />
             </Component>
-            <Component Id="cmp695DF09F0E9EE30558F8C6D16553F843" Guid="{61E70799-D4B8-4E28-9482-9E89F370B3CD}">
+            <Component Id="cmp695DF09F0E9EE30558F8C6D16553F843" Guid="{6853FDFB-4835-4548-ABB0-7239E72C0D8E}">
                 <File Id="filEAA27D91AD78E3FCD8BA846C92752BAA" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.EnvironmentVariables.dll" />
             </Component>
-            <Component Id="cmp0F72FDFC2B5DABBEED0952957424C516" Guid="{BEFDCB02-A734-43F6-BD30-5DCD6314A097}">
+            <Component Id="cmp0F72FDFC2B5DABBEED0952957424C516" Guid="{7F8FD9B1-43E9-4EB4-9589-DF763F4FEB29}">
                 <File Id="fil732B9D1BB8B2BA629B3802CB721B7E55" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.FileExtensions.dll" />
             </Component>
-            <Component Id="cmp191446DEBB621CC91C2B2E713F085F01" Guid="{551969F7-2AAD-4888-864B-5C1037675BBF}">
+            <Component Id="cmp191446DEBB621CC91C2B2E713F085F01" Guid="{8835ADF6-9EAE-463A-A418-CAB6EA00CDFB}">
                 <File Id="fil0CC9532B169036B73874B81A5F9C8F97" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.Json.dll" />
             </Component>
-            <Component Id="cmp306F083BB44F8AEA42DD7E2AB9CD82C2" Guid="{B5F3E81A-FC83-42A0-8622-CA73B930E67D}">
+            <Component Id="cmp306F083BB44F8AEA42DD7E2AB9CD82C2" Guid="{5DEA7FCE-9287-4C10-A393-426E0844D2B0}">
                 <File Id="fil867F166CDED00C699F6B217A4FC42957" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Configuration.UserSecrets.dll" />
             </Component>
-            <Component Id="cmp198468A4AE980CD6955CB6EB86083726" Guid="{89297379-A5B6-47DB-AB0D-23F58317A41E}">
+            <Component Id="cmp198468A4AE980CD6955CB6EB86083726" Guid="{4C82A89B-DDF4-4C70-BCEC-2C5D3C6EB22A}">
                 <File Id="fil02E4E4D119BFC4831CEA5A71F1288443" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.DependencyInjection.Abstractions.dll" />
             </Component>
-            <Component Id="cmp493E9BC44885B6BC5C57BDB1302C40D9" Guid="{9259F137-D046-4928-A758-B6A9330CDB60}">
+            <Component Id="cmp493E9BC44885B6BC5C57BDB1302C40D9" Guid="{2014E593-238A-4A6A-B6BB-2C22A410C223}">
                 <File Id="filA40291A4FBD4719B6995DEB783A39A65" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.DependencyInjection.dll" />
             </Component>
-            <Component Id="cmpD71177CD3BCD768F1F74211E6E2E353D" Guid="{B63C6643-6AA3-47A1-BC26-9FF6C0E83CBF}">
+            <Component Id="cmpD71177CD3BCD768F1F74211E6E2E353D" Guid="{EEA37188-27D5-4476-A3AD-9E7F473870C0}">
                 <File Id="filD6E38AF71AD3567AEFAB7A283BC7D3C6" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Diagnostics.Abstractions.dll" />
             </Component>
-            <Component Id="cmpBB58932E81784E90600A3B2DEB2E2D6A" Guid="{AA7A7CFE-4901-4A9F-A163-DF6712592C22}">
+            <Component Id="cmpBB58932E81784E90600A3B2DEB2E2D6A" Guid="{66E7B759-51C3-4B91-B4A5-6C9893F2CF6E}">
                 <File Id="filBFD8FDE91AE486857624064B5808A0C1" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Diagnostics.dll" />
             </Component>
-            <Component Id="cmp0209E8308C907CAD5474151F7C6836F5" Guid="{2556ED64-036F-42D7-8222-205A61B16B8E}">
+            <Component Id="cmp0209E8308C907CAD5474151F7C6836F5" Guid="{0E5B90F0-6E72-4378-9B11-FDB46C22CD5F}">
                 <File Id="fil1036FDFADEB4E1F1FB133485A70A0DD4" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.FileProviders.Abstractions.dll" />
             </Component>
-            <Component Id="cmp6361EE614B62630DD923390326EAF03C" Guid="{22AF019C-6E36-4024-90ED-55FB34C1F5DF}">
+            <Component Id="cmp6361EE614B62630DD923390326EAF03C" Guid="{FB84D926-C355-4324-A76A-A4EE84DDD16B}">
                 <File Id="fil1B3C0C67DC448F84DA45630529031E78" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.FileProviders.Physical.dll" />
             </Component>
-            <Component Id="cmp1E5A63B6F657DD090469973A1C3D2C59" Guid="{BC8AEB39-EF28-4BC0-BF56-7E6E7D16E103}">
+            <Component Id="cmp1E5A63B6F657DD090469973A1C3D2C59" Guid="{C0A61F3B-1B46-4A38-BB1D-FDDC4EA018E6}">
                 <File Id="fil931DDF3633F4CABF1422600B672C70DE" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.FileSystemGlobbing.dll" />
             </Component>
-            <Component Id="cmpB96239F931804879A085E057C6E72657" Guid="{672D813E-F98C-447F-909D-EAB7DF726D33}">
+            <Component Id="cmpB96239F931804879A085E057C6E72657" Guid="{61572B3E-08D9-46D0-800F-6FA9BA8E9B9D}">
                 <File Id="filFE47041DFF0F714E6C7D801D2D2C140A" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Hosting.Abstractions.dll" />
             </Component>
-            <Component Id="cmp1ED5B5DCD1725E69F71E98865BCEAAB9" Guid="{D320C546-FF97-40F5-8DD6-20B3795555FB}">
+            <Component Id="cmp1ED5B5DCD1725E69F71E98865BCEAAB9" Guid="{D62962CE-8873-41D9-A923-F41F57CBBEE7}">
                 <File Id="filD0586081609434942EDB53299EF52D71" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Hosting.dll" />
             </Component>
-            <Component Id="cmpFD16E629F3B1C17887ACD3B97583CB13" Guid="{FA97FD58-3F2B-47AB-9F96-19D6735E0F6C}">
+            <Component Id="cmpFD16E629F3B1C17887ACD3B97583CB13" Guid="{3886FB66-0D4B-4875-A634-70FB9278A880}">
                 <File Id="filEFB595E81CA62CF58EF39208C76F7F06" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Hosting.WindowsServices.dll" />
             </Component>
-            <Component Id="cmp8C674FD6A69988A60A77A4CEE0F53781" Guid="{DBFEE499-876B-4374-AD49-C1AF60AEF62C}">
+            <Component Id="cmp8C674FD6A69988A60A77A4CEE0F53781" Guid="{50E96E59-C87F-4D90-A77B-2EA4411ADE14}">
                 <File Id="fil72342637E9F74EE945317D4603CEBA2F" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.Abstractions.dll" />
             </Component>
-            <Component Id="cmp9B211F39744547E733F9040027FF1A3B" Guid="{DF642635-B318-4DC6-AF18-92AE8DCF524E}">
+            <Component Id="cmp9B211F39744547E733F9040027FF1A3B" Guid="{4CB9A88A-2728-4F29-96EB-EB1124A62B09}">
                 <File Id="filC6D4BDB43CC150D24C5E1BDE9EB552F7" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.Configuration.dll" />
             </Component>
-            <Component Id="cmp60BA3AB6448C5A0208FEDA4F886EDDE8" Guid="{D9E874A9-9612-4F9B-822E-6EA812351153}">
+            <Component Id="cmp60BA3AB6448C5A0208FEDA4F886EDDE8" Guid="{2546363E-A9AA-4FB6-9BE6-B1E3622515DF}">
                 <File Id="filA347F900C2828DE2F50C35BDA8F5CE44" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.Console.dll" />
             </Component>
-            <Component Id="cmp591239506CAB75D331DE5D90D6713057" Guid="{FFEDDFAB-2048-47D7-80EF-8BE531F53DBF}">
+            <Component Id="cmp591239506CAB75D331DE5D90D6713057" Guid="{6532D519-AB1F-417E-A5BB-A4C0C0757C2E}">
                 <File Id="fil1CB90B4A15160F351B5EB5D2DED1B050" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.Debug.dll" />
             </Component>
-            <Component Id="cmp835034F744990576E31C2DBC7C9293BF" Guid="{A8804880-1A49-43DC-BAFF-78C98A6D458A}">
+            <Component Id="cmp835034F744990576E31C2DBC7C9293BF" Guid="{23F8EDE3-89E0-46ED-BC53-7EA9EF8E1213}">
                 <File Id="fil71DD299EE7649E964200A4127797D1C0" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.dll" />
             </Component>
-            <Component Id="cmp3D087D80699D13BCB013A8533A2C0DCF" Guid="{F1B22405-3B3B-45D0-AAAA-74C78792CF3A}">
+            <Component Id="cmp3D087D80699D13BCB013A8533A2C0DCF" Guid="{69162E9C-036D-49E0-8906-B8B88B91D8B6}">
                 <File Id="filA050696110EF79DCA5E76B6513E54FB2" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.EventLog.dll" />
             </Component>
-            <Component Id="cmp63493859708989EE0F11F5DF7347E61A" Guid="{6080CD13-0BCC-41EE-AFB7-95203D103E32}">
+            <Component Id="cmp63493859708989EE0F11F5DF7347E61A" Guid="{61BB67D4-5A94-4373-8F14-CE28DCBCCD70}">
                 <File Id="filBF2F378F474FFE2ABA30A373F8BB00C0" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Logging.EventSource.dll" />
             </Component>
-            <Component Id="cmpF5D2F2D913749765205DC918BD981CD0" Guid="{55544B4F-BAFB-4DCA-A890-83A55A54F26B}">
+            <Component Id="cmpF5D2F2D913749765205DC918BD981CD0" Guid="{653B44D0-7B2D-4AA0-9CB9-374F333CB17C}">
                 <File Id="fil3F5CF8D11C3311A25D3082B99A709528" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Options.ConfigurationExtensions.dll" />
             </Component>
-            <Component Id="cmp3279C150AE8DF554FD7EEE2085672A2B" Guid="{AFD2E6D1-0747-435D-A622-09EBA1A45E4C}">
+            <Component Id="cmp3279C150AE8DF554FD7EEE2085672A2B" Guid="{11E2BAE5-FF99-42F3-ABE2-B905DA6E919F}">
                 <File Id="filA8D1F5D61FD7BC25099F707CBF5B1F24" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Options.dll" />
             </Component>
-            <Component Id="cmp946145B53A7DCDFA822B0EFD2314FAB6" Guid="{7710FB8A-2336-4E4D-A44B-28D59F42CC79}">
+            <Component Id="cmp946145B53A7DCDFA822B0EFD2314FAB6" Guid="{7C0E96E7-A8DA-4379-94AC-E21E8AED9B0A}">
                 <File Id="fil773F29942324AAB2A7E1977E1AC63609" KeyPath="yes" Source="$(var.CombinedSourceDir)\Microsoft.Extensions.Primitives.dll" />
             </Component>
-            <Component Id="cmpA08783F3A624041E26FF7D7A196688E3" Guid="{FE76FFA4-ED69-4C5C-A1B0-57DA6F7D9D0B}">
+            <Component Id="cmpA08783F3A624041E26FF7D7A196688E3" Guid="{D426DBE7-C69C-45EE-8145-D496D6209A61}">
                 <File Id="fil3E46716A92F074ECB6B960719B37CE9D" KeyPath="yes" Source="$(var.CombinedSourceDir)\NetConnectionHelper.dll" />
             </Component>
-            <Component Id="cmpE13F4C9BC54AF1D56A64F952A0197753" Guid="{56888D81-D97D-4141-9630-7FAB16B2EB27}">
+            <Component Id="cmpE13F4C9BC54AF1D56A64F952A0197753" Guid="{5CEA0E72-39AE-4212-BD95-559E0FE268E6}">
                 <File Id="fil90B33FAF302B17BB6FB022188816CFE4" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSync.deps.json" />
             </Component>
-            <Component Id="cmp74F3E521E8523ABCAC19D64B33334297" Guid="{C78FB72C-020D-49A8-82C0-A9C7E1FC3823}">
+            <Component Id="cmp74F3E521E8523ABCAC19D64B33334297" Guid="{F35890B7-F2C8-41FA-9042-7695D118D6D0}">
                 <File Id="filE9D29068B537632E46DA35EABD49F344" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSync.dll" />
             </Component>
-            <Component Id="cmp40394224D2BAFE9A3C51B3DB139CEE88" Guid="{D5920073-E885-4476-A32D-F9C5B2D7831F}">
+            <Component Id="cmp40394224D2BAFE9A3C51B3DB139CEE88" Guid="{82DA9F0C-5E0D-4DDD-99E7-9E2AD3C62F66}">
                 <File Id="fil61BC10E9EFB090DAE11977C2049D9EDF" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSync.exe" />
             </Component>
-            <Component Id="cmp7BDF96BC67659BC8E3FEA31622346C2D" Guid="{E4F9C9DF-7298-40B4-8105-6D9FC75FFEB4}">
+            <Component Id="cmp7BDF96BC67659BC8E3FEA31622346C2D" Guid="{18E80070-C0E6-4B94-A0DE-E2FA65757328}">
                 <File Id="filD13B65F0435504FAB13F9178BDCE2552" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSync.runtimeconfig.json" />
             </Component>
-            <Component Id="cmp72E9257FC18022E943EBB3A4B838D749" Guid="{1F446BE9-AEF3-4277-B85D-7A4FFEEC57DF}">
+            <Component Id="cmp72E9257FC18022E943EBB3A4B838D749" Guid="{BB5E6E00-875F-4CDB-AB96-5A9D698F0598}">
                 <File Id="filA40D0EBA948C8698E6C5F81F5C91732C" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSyncService.deps.json" />
             </Component>
-            <Component Id="cmp8211B53058C176FCF1B6315C21B95552" Guid="{CEA8E7B8-EEB7-480C-BAE4-AFDF369CD05C}">
+            <Component Id="cmp8211B53058C176FCF1B6315C21B95552" Guid="{B0ABA405-3A72-492B-B130-C7C239E059A4}">
                 <File Id="filBF1AA88B106F03ADAF824D4F31F7F068" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSyncService.dll" />
             </Component>
-            <Component Id="cmpFE3E63834AAFC9905A4D3F76DD827C8F" Guid="{0A0E81FD-9B8C-4EE4-A4E7-05B2BD1BD420}">
+            
+            <Component Id="cmpFE3E63834AAFC9905A4D3F76DD827C8F" Guid="{2C6EE7EE-DADA-42A2-9567-05542E18047E}">
                 <File Id="fil8E6C5CC7AB153643EFE2F27019E1B9EE" KeyPath="yes" Source="$(var.CombinedSourceDir)\S1FileSyncService.runtimeconfig.json" />
             </Component>
-            <Component Id="cmp28DA583D03D243568B9E8D67E28DC03E" Guid="{DA588CD1-E2DB-45BD-9960-02F0842BF67D}">
+            <Component Id="cmp28DA583D03D243568B9E8D67E28DC03E" Guid="{4AE8601E-7AAC-4B90-995E-B7404899D02B}">
                 <File Id="fil7F8EC318E9E8F0F09CC7C081378B6293" KeyPath="yes" Source="$(var.CombinedSourceDir)\System.Diagnostics.EventLog.dll" />
             </Component>
-            <Component Id="cmp3C5190B580EDFB87D0BC5E835BB950DE" Guid="{E04C62F7-C774-463D-ABD2-59FBFA9693D2}">
+            <Component Id="cmp3C5190B580EDFB87D0BC5E835BB950DE" Guid="{FA989BCE-27C6-45EA-A13C-D5830AADDE08}">
                 <File Id="fil0B6369FF78F990F18A525D5F0CC6D1AB" KeyPath="yes" Source="$(var.CombinedSourceDir)\System.ServiceProcess.ServiceController.dll" />
             </Component>
+            <Directory Id="dirA23B699A6BC60FD64219767AB7139367" Name="Assets">
+                <Component Id="cmp6D49AAB013F8BDFBF69B4C822228DB38" Guid="{B494F5F6-D332-4291-B83D-B8C61CCFE9F8}">
+                    <File Id="fil6CD8EAFC3AB0B972876AECDCA06AC262" KeyPath="yes" Source="$(var.CombinedSourceDir)\Assets\app.ico" />
+                </Component>
+            </Directory>
             <Directory Id="dir58E8247E2885C01898CAD009F9EFD8BA" Name="runtimes">
                 <Directory Id="dir9BE9104649A116CC7BCCF4D9CCD3331B" Name="win">
                     <Directory Id="dirD19B0610952D1EE2D417EB5361695989" Name="lib">
                         <Directory Id="dir83F1876DE08D123126E8658B6C89D603" Name="net8.0">
-                            <Component Id="cmp034548520D5A019A4E7BD5A903DD0FA2" Guid="{5195D72E-6E18-460A-8F8F-ED18B7AE5F73}">
+                            <Component Id="cmp034548520D5A019A4E7BD5A903DD0FA2" Guid="{3D5E4F52-2D86-4043-8452-3CC0A12C7753}">
                                 <File Id="filF2935F7A7ABB76FDC059A3F595230103" KeyPath="yes" Source="$(var.CombinedSourceDir)\runtimes\win\lib\net8.0\System.Diagnostics.EventLog.dll" />
                             </Component>
-                            <Component Id="cmp932BB15D247B8FEAA0D636EBE70C9160" Guid="{9E625CED-9B60-477B-B452-C328FBCC0D95}">
+                            <Component Id="cmp932BB15D247B8FEAA0D636EBE70C9160" Guid="{634A85E4-8614-4667-86AA-11E9FB01517F}">
                                 <File Id="filE9AD620A904FA68BE02261BC7B7882F4" KeyPath="yes" Source="$(var.CombinedSourceDir)\runtimes\win\lib\net8.0\System.ServiceProcess.ServiceController.dll" />
                             </Component>
                         </Directory>
@@ -184,6 +190,7 @@
             <ComponentRef Id="cmpFE3E63834AAFC9905A4D3F76DD827C8F" />
             <ComponentRef Id="cmp28DA583D03D243568B9E8D67E28DC03E" />
             <ComponentRef Id="cmp3C5190B580EDFB87D0BC5E835BB950DE" />
+            <ComponentRef Id="cmp6D49AAB013F8BDFBF69B4C822228DB38" />
             <ComponentRef Id="cmp034548520D5A019A4E7BD5A903DD0FA2" />
             <ComponentRef Id="cmp932BB15D247B8FEAA0D636EBE70C9160" />
         </ComponentGroup>
