--- a/S1FileSync/Views/FileSyncProgressView.xaml
+++ b/S1FileSync/Views/FileSyncProgressView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:S1FileSync.Views"
+             xmlns:converters="clr-namespace:S1FileSync.Converters"
              xmlns:model="clr-namespace:S1FileSync.ViewModels"
              d:DataContext="{d:DesignInstance Type=model:FileSyncProgressViewModel}"
              mc:Ignorable="d">
