--- a/S1FileSync/Views/MainWindow.xaml
+++ b/S1FileSync/Views/MainWindow.xaml
@@ -4,14 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:S1FileSync"
+        xmlns:converters="clr-namespace:S1FileSync.Converters"
         xmlns:views="clr-namespace:S1FileSync.Views"
+        xmlns:model="clr-namespace:S1FileSync.ViewModels"
         mc:Ignorable="d"
         Title="File Synchronization"
         Width="800" Height="550"
         MinWidth="600" MinHeight="400"
         MaxHeight="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}"
         MaxWidth="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}"
-        xmlns:model="clr-namespace:S1FileSync.ViewModels"
         d:DataContext="{d:DesignInstance Type=model:MainViewModel}"
         Icon="/Assets/app.ico"
         Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
@@ -74,13 +75,31 @@
         <!-- 탭 컨트롤 -->
         <TabControl Grid.Row="1" Margin="0,5,0,0">
             <TabControl.Resources>
-                <Style TargetType="TabItem">
+                <Style TargetType="{x:Type TabItem}">
                     <Setter Property="Padding" Value="15,5"/>
-                    <Setter Property="HeaderTemplate">
+                    <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="Template">
                         <Setter.Value>
-                            <DataTemplate>
-                                <TextBox Text="{Binding}" FontSize="14"/>
-                            </DataTemplate>
+                            <ControlTemplate TargetType="{x:Type TabItem}">
+                                <Border x:Name="Border"
+                                        BorderThickness="1,1,1,0"
+                                        Padding="{TemplateBinding Padding}">
+                                    <ContentPresenter x:Name="ContentSite"
+                                                      VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"
+                                                      ContentSource="Header"
+                                                      RecognizesAccessKey="True"/>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Panel.ZIndex" Value="100"/>
+                                        <Setter TargetName="Border" Property="Background" Value="#FFFFFF"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="False">
+                                        <Setter TargetName="Border" Property="Background" Value="#F0F0F0"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
                         </Setter.Value>
                     </Setter>
                 </Style>
@@ -100,7 +119,7 @@
                             BorderBrush="#DDDDDD"
                             Background="#F9F9F9"
                             CornerRadius="4">
-                        <views:FileSyncProgressView/>
+                        <ContentControl x:Name="ProgressViewContainer"/>
                     </Border>
                     
                     <!-- 동기화 관련 항목 -->
