prob. Named Pipe가 서로 다른 파이프에 연결되고 있는 가능성이 존재. HandShake나 Hearbeat 로직 필요.

--- a/S1FileSync/Views/MainWindow.xaml
+++ b/S1FileSync/Views/MainWindow.xaml
@@ -68,6 +68,8 @@
                 <Separator/>
                 <MenuItem Header="Service Status">
                     <MenuItem Header="{Binding ServiceStatus}" IsEnabled="False"/>
+                    <MenuItem Header="IPC Connection:" IsEnabled="False"/>
+                    <MenuItem Header="{Binding IPCStatus}" IsEnabled="False"/>
                 </MenuItem>
             </MenuItem>
         </Menu>
