--- a/S1FileSync/Views/SettingsView.xaml
+++ b/S1FileSync/Views/SettingsView.xaml
@@ -1,83 +1,216 @@
-﻿<Page x:Class="S1FileSync.Views.SettingsView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:S1FileSync.Views"
-      xmlns:model="clr-namespace:S1FileSync.ViewModels"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="SettingsView"
-      d:DataContext="{d:DesignInstance Type=model:SettingsViewModel}">
+﻿<UserControl x:Class="S1FileSync.Views.SettingsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:S1FileSync.Views"
+             xmlns:model="clr-namespace:S1FileSync.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type=model:SettingsViewModel}">
+    <UserControl.Resources>
+        <Style x:Key="SettingsSectionStyle" TargetType="Border">
+            <Setter Property="Background" Value="{DynamicResource SidebarBackground}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderColor}"/>
+            <Setter Property="CornerRadius" Value="8"/>
+            <Setter Property="Padding" Value="24"/>
+            <Setter Property="Margin" Value="0,0,0,24"/>
+        </Style>
 
-    <Grid Margin="20">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition />
-        </Grid.RowDefinitions>
+        <Style x:Key="SettingsHeaderStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+            <Setter Property="Margin" Value="0,0,0,16"/>
+        </Style>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Remote Location:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Settings.RemoteLocation}" Margin="5"></TextBox>
+        <Style x:Key="FormGroupStyle" TargetType="StackPanel">
+            <Setter Property="Margin" Value="0,0,0,20"/>
+        </Style>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Local Location:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Settings.LocalLocation}" Margin="5"></TextBox>
+        <Style x:Key="FormLabelStyle" TargetType="TextBlock">
+            <Setter Property="FontWeight" Value="Medium"/>
+            <Setter Property="Foreground" Value="{DynamicResource SecondaryTextColor}"/>
+            <Setter Property="Margin" Value="0,0,0,8"/>
+        </Style>
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Folder Pattern:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Settings.FolderPattern}" Margin="5"></TextBox>
-        
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="File Extensions:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Settings.FileExtensions}" Margin="5"
-                 ToolTip="Enter file extensions separated by commas (e.g., .txt, .doc, .pdf)"></TextBox>
+        <Style x:Key="ModernTextBoxStyle" TargetType="TextBox">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Padding" Value="12,8"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderColor}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColor}"/>
+                </Trigger>
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColor}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Folder Structure:" VerticalAlignment="Center"></TextBlock>
-        <ComboBox Grid.Row="4" Grid.Column="1" Margin="5"
-                  ItemsSource="{Binding FolderStructureOptions}"
-                  SelectedValuePath="Value"
-                  DisplayMemberPath="DisplayText"
-                  SelectedValue="{Binding Settings.UseFlatStructure}">
-        </ComboBox>
-        
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Duplicate Handling:" VerticalAlignment="Center"></TextBlock>
-        <ComboBox Grid.Row="5" Grid.Column="1" Margin="5"
-                  ItemsSource="{Binding DuplicateHandlingOptions}"
-                    SelectedValuePath="Value"
-                    DisplayMemberPath="DisplayText"
-                  SelectedValue="{Binding Settings.DuplicateHandling}">
-        </ComboBox>
-        
-        <TextBlock Grid.Row="6" Grid.Column="0" Text="Sync Interval:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SyncIntervalString}" Margin="5"
-                 ToolTip="Enter time interval in format: [dd.]HH:mm:ss"></TextBox>
+        <Style x:Key="ModernPasswordBoxStyle" TargetType="PasswordBox">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Padding" Value="12,8"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderColor}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColor}"/>
+                </Trigger>
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColor}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
 
-        <TextBlock Grid.Row="7" Grid.Column="0" Text="Username:" VerticalAlignment="Center"></TextBlock>
-        <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding Settings.Username}" Margin="5"></TextBox>
+        <Style x:Key="ModernComboBoxStyle" TargetType="ComboBox">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Padding" Value="12,8"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackground}"/>
+            <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderColor}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+        </Style>
 
-        <TextBlock Grid.Row="8" Grid.Column="0" Text="Password:" VerticalAlignment="Center"></TextBlock>
-        <PasswordBox Grid.Row="8" Grid.Column="1" x:Name="PasswordBox" Margin="5"></PasswordBox>
+        <Style x:Key="ActionButtonStyle" TargetType="Button">
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Padding" Value="20,0"/>
+            <Setter Property="Background" Value="{DynamicResource PrimaryColor}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                                CornerRadius="6"
+                                Padding="{TemplateBinding Padding}">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="{DynamicResource PrimaryColorHover}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
 
-        <Button Grid.Row="9" Grid.Column="1" Content="Save Settings" Command="{Binding SaveSettingsCommand}" Margin="5"></Button>
-        
-        <Button Grid.Row="10" Grid.Column="1" Content="Sync Settings" Command="{Binding SyncSettingsCommand}" Margin="5"></Button>
+    <ScrollViewer>
+        <StackPanel Margin="24">
+            <Border Style="{StaticResource SettingsSectionStyle}">
+                <StackPanel>
+                    <TextBlock Text="Connection Settings"
+                               Style="{StaticResource SettingsHeaderStyle}"/>
 
-        <Button Grid.Row="11" Grid.Column="1" Content="Test Connection" Command="{Binding TestConnectionCommand}" Margin="5"></Button>
-        <TextBlock Grid.Row="12" Grid.Column="1"
-                   Text="{Binding ConnectionStatus}"
-                   FontWeight="Bold"
-                   Margin="5"></TextBlock>
-    </Grid>
-</Page>
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Remote Location"
+                                   Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding Settings.RemoteLocation}"
+                                 Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Username"
+                                   Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding Settings.Username}"
+                                 Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Password"
+                                   Style="{StaticResource FormLabelStyle}"/>
+                        <PasswordBox x:Name="PasswordBox"
+                                     Style="{StaticResource ModernPasswordBoxStyle}"/>
+                    </StackPanel>
+
+                    <Button Content="Test Connection"
+                            Command="{Binding TestConnectionCommand}"
+                            Style="{StaticResource ActionButtonStyle}"
+                            HorizontalAlignment="Left"/>
+
+                    <TextBlock Text="{Binding ConnectionStatus}"
+                               Margin="0,12,0,0"
+                               Foreground="{DynamicResource SecondaryTextColor}"/>
+                </StackPanel>
+            </Border>
+
+            <Border Style="{StaticResource SettingsSectionStyle}">
+                <StackPanel>
+                    <TextBlock Text="Synchronization Settings"
+                             Style="{StaticResource SettingsHeaderStyle}"/>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Local Location"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding Settings.LocalLocation}"
+                                Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Folder Pattern"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding Settings.FolderPattern}"
+                                Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="File Extensions"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding Settings.FileExtensions}"
+                                Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Sync Interval"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <TextBox Text="{Binding SyncIntervalString}"
+                                Style="{StaticResource ModernTextBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Folder Structure"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <ComboBox ItemsSource="{Binding FolderStructureOptions}"
+                                SelectedValue="{Binding Settings.UseFlatStructure}"
+                                DisplayMemberPath="DisplayText"
+                                SelectedValuePath="Value"
+                                Style="{StaticResource ModernComboBoxStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource FormGroupStyle}">
+                        <TextBlock Text="Duplicate Handling"
+                                 Style="{StaticResource FormLabelStyle}"/>
+                        <ComboBox ItemsSource="{Binding DuplicateHandlingOptions}"
+                                SelectedValue="{Binding Settings.DuplicateHandling}"
+                                DisplayMemberPath="DisplayText"
+                                SelectedValuePath="Value"
+                                Style="{StaticResource ModernComboBoxStyle}"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Right"
+                        Margin="0,8,0,0">
+                <Button Content="Save Settings"
+                        Command="{Binding SaveSettingsCommand}"
+                        Style="{StaticResource ActionButtonStyle}"
+                        Margin="0,0,12,0"/>
+                <Button Content="Sync Settings"
+                        Command="{Binding SyncSettingsCommand}"
+                        Style="{StaticResource ActionButtonStyle}"/>
+            </StackPanel>
+        </StackPanel>
+    </ScrollViewer>
+</UserControl>
